# trino-cpp

./: .gitignore  CMakeLists.txt  Containerfile  Makefile  README.md
include/: trino-query.h
src/: main.cpp  trino-query.cpp
